# ros2_ethercat

./: .gitignore  INSTALL_IGH_ETHERCAT_MASTER.md  README.md  igh_auto_install.sh
custom_interfaces/: CMakeLists.txt
custom_interfaces/srv/: GripperControl.srv
ethercat_plugins/: ethercat_plugins.xml
ethercat_plugins/src/omron_plugins/: omron_fh_2050 copy.cpp  omron_fh_2050.cpp
gpio_control/: CMakeLists.txt  ethercat_start.sh  ethercat_stop.sh  package.xml  readme.md
gpio_control/config/: camera_controller_fh_2050.yaml  gpio_controller_beckoff_ek1100_el1008_el2008.yaml  gpio_controller_omron_nxecc201_nxid5442.yaml  gpio_controller_omron_nxecc201_nxid5442_nxod5256.yaml  gpio_controller_omron_nxecc201_nxod5256.yaml
gpio_control/doc/: Building_ethercat_driver_ros2.txt  EC Engineer.txt  IGH master setup  IGH master setup wc2  acontis simulation setup  acontis tools  ethercat plugins  ros_dependencies_install_wc2.txt  vision.txt  vision2.txt  vision2_soem.txt  vision_soem.txt
gpio_control/doc/ESI/: Omron FH-xxxx-xx.xml
gpio_control/doc/ESI/Omron_FHFHV/: Omron FHV7x-xxxxx.xml
gpio_control/doc/EXI/: acontis_hardware_simulation_beckoff_ek1100_el1008_el2008.xml  acontis_hardware_simulation_omron_fh2050.xml  acontis_hardware_simulation_omron_nxecc202_nxid51421_nxod5256_wc3.xml  acontis_hardware_simulation_omron_nxecc202_nxid5442_nxod5256_fh2050_wc2.xml  acontis_hardware_simulation_omron_nxecc202_nxid5442_nxod5256_wc2.xml
gpio_control/launch/: gpio_control_beckoff_ek1100_el1008_el2008_launch.py  gpio_control_omron_fh_2050_launch.py  gpio_control_omron_nxecc201_nxid5442_launch.py  gpio_control_omron_nxecc201_nxid5442_nxod5256_wc2_launch.py  gpio_control_omron_nxecc201_nxod5256_launch.py  gpio_control_omron_nxecc202_nxid5142_1_nxod5256_wc3_launch.py  wc2_launch.py  wc3_launch.py
gpio_control/src/: camera_service_server.cpp  output_control_service_server.cpp  output_reset_service_server.cpp  test_output_publisher.cpp
gpio_control/urdf/: camera_ros2_control_omron_fh_2050.xacro  gpio_ros2_control_beckoff_ek1100_el1008_el2008.xacro  gpio_ros2_control_omron_nxecc201_nxid5442.xacro  gpio_ros2_control_omron_nxecc201_nxid5442_nxod5256.xacro  gpio_ros2_control_omron_nxecc202_nxid5142_1_nxod5256.xacro  gpio_ros2_control_omron_nxecc202_nxod5256.xacro
